log
Fri 23 Sep 2022 07:47:28 PM UTC: 
 tests:  1|8
total_score: 0/70
80f43b2
Fri 23 Sep 2022 08:42:37 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
4616efc
Fri 23 Sep 2022 08:43:26 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:12: error: returning ‘TreeNode *’ from a function with incompatible return type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   44 |     return tree;
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
28925fa
Fri 23 Sep 2022 08:47:23 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|8
total_score: 0/70
4e68159
Fri 23 Sep 2022 08:49:27 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|8
total_score: 0/70
22d7fc4
Fri 23 Sep 2022 08:50:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
95499ac
Fri 23 Sep 2022 09:15:30 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:7: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   78 |       if (is_equal(tree,key,aux->pair->key)==1)
      |       ^~
treemap.c:80:9: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   80 |         tree->current=aux->pair->data;
      |         ^~~~
treemap.c:80:32: error: ‘Pair’ has no member named ‘data’
   80 |         tree->current=aux->pair->data;
      |                                ^~
cc1: all warnings being treated as errors
Compilation failed
6f10bb3
Fri 23 Sep 2022 09:15:43 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:80:32: error: ‘Pair’ has no member named ‘data’
   80 |         tree->current=aux->pair->data;
      |                                ^~
Compilation failed
5ffafb2
Fri 23 Sep 2022 09:23:35 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:7: error: ‘result’ undeclared (first use in this function)
   82 |       result=tree->lower_than(key,aux->pair->key);
      |       ^~~~~~
treemap.c:82:7: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:84:17: error: ‘TreeMap’ has no member named ‘left’
   84 |         aux=tree->left;
      |                 ^~
treemap.c:86:17: error: ‘TreeMap’ has no member named ‘right’
   86 |         aux=tree->right;
      |                 ^~
Compilation failed
be7d8a8
Fri 23 Sep 2022 09:23:46 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:84:17: error: ‘TreeMap’ has no member named ‘left’
   84 |         aux=tree->left;
      |                 ^~
treemap.c:86:17: error: ‘TreeMap’ has no member named ‘right’
   86 |         aux=tree->right;
      |                 ^~
Compilation failed
653cb4d
Fri 23 Sep 2022 09:35:57 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
b90e6ca
Fri 23 Sep 2022 09:41:13 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:39: error: expected ‘;’ before ‘return’
   79 |         tree->current=aux->pair->value
      |                                       ^
      |                                       ;
   80 |         return aux->pair;
      |         ~~~~~~                         
Compilation failed
9b7f91b
Fri 23 Sep 2022 09:41:20 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5761d88
Fri 23 Sep 2022 09:41:36 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:22: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   79 |         tree->current=aux->pair;
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
1d6dc33
Fri 23 Sep 2022 09:42:11 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
151bdae
Fri 23 Sep 2022 09:42:56 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
b8aac5f
Fri 23 Sep 2022 09:59:52 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
5e6d4b4
Fri 23 Sep 2022 10:12:23 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
0bd1e51
Fri 23 Sep 2022 10:18:13 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:22: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   81 |         tree->current=aux->pair;
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
6b63f2e
Fri 23 Sep 2022 10:19:23 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
22dc539
Fri 23 Sep 2022 10:19:36 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
75e11cb
Fri 23 Sep 2022 10:27:01 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:7: error: ‘else’ without a previous ‘if’
   87 |       else
      |       ^~~~
treemap.c:84:11: error: unused variable ‘result’ [-Werror=unused-variable]
   84 |       int result=tree->lower_than(key,aux->pair->key);
      |           ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
162940f
Fri 23 Sep 2022 10:27:05 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8bbdc82
Fri 23 Sep 2022 10:27:30 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3fc7cdf
